--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 
 
           <li>
-            <a href="https://twitter.com/OrbitalProtocol" class="navbar-link">Twitter</a>
+            <a href="https://twitter.com/OrbitalSolana" class="navbar-link">Twitter</a>
           </li>
 
           <li>
